2017-04-23  Araki Ken  <arakiken@users.sf.net>

	* main_loop.c: Minor fixes.

	* fb/ui_font.c: Compiling error is fixed.

2017-04-23  Araki Ken  <arakiken@users.sf.net>

	* ui_window.c:
	  draw_string() is separated to draw_string() and draw_string_intern()
	  in order to show complementary glyphs.

	* ui.h, ui_font.h, ui_font.c:
	  ui_get_bitmap() returns a complementary glyph in an alternative font
	  if no glyph is found in a specified xfont.

	* main_loop.c, ui_font_config.c:
	  ui_costomize_font_file() works if --aafont option is specified on framebuffer or
	  wayland.

2017-04-16  Araki Ken  <arakiken@users.sf.net>

	* README, README.ja: Updated.

	* fb/ui_window.c: ui_window_move() does nothing for root windows except on wayland.

	* vte.c, vte_wayland.c:
	  - toplevel_configure and hierachy_changed handlers are removed on wayland.
	  - ui_display_map() is called from vte_terminal_focus_in() instead of
	    vte_terminal_map() on wayland.
	  - Focus and unfocus hacks are removed on wayland.
	  - Dummy api functions related to VteRegex (0.46 or later) are added.

	* wayland/ui.h, wayland/ui_display.c:
	  wl_subsurface instead of wl_shell_surface is used for libvte compatible library.

	* android/jni/ui.h: COMPOSE_DECSP_FONT is defined.

2017-03-28  Araki Ken  <arakiken@users.sf.net>

	* ui_display_linux.c:
	  - 10 or larger number is availabe for event device (/dev/input/event*%d*) number.
	  - "ts" is removed from mouse name list.

	* fb/ui_font.c, fb/ui_decsp_font.c: "decsp-%dx%d" of a composed decsp font is
	  created in ui_font_new() instead of ui_load_decsp_xfont().

	* */ui.h: COMPOSE_DECSP_FONT is added.

2017-03-25  Araki Ken  <arakiken@users.sf.net>

	* {wayland,fb}/ui_window.c: convert_to_decsp_font_index() is added.

	* {wayland,fb}/ui_font.c:
	  - ui_compose_dec_special_font() is implemented.
	  - If compose_dec_special_font is true, ui_load_decsp_xfont() is called.

	* {wayland,fb}/ui_decsp_font.[ch]: Added.
