@@ -1298,15 +1298,19 @@ int ui_window_move(ui_window_t *win, int x, int y) {
   if (win->parent) {
     x += win->parent->hmargin;
     y += win->parent->vmargin;
-  } else {
-#ifndef MANAGE_ROOT_WINDOWS_BY_MYSELF
-#ifdef USE_WAYLAND
-    ui_display_move(win->disp, x, y);
-#endif
-#endif
-
-    return 0;
   }
+#ifndef MANAGE_ROOT_WINDOWS_BY_MYSELF
+  else {
+    win->x = x;
+    win->y = y;
+
+#ifdef USE_WAYLAND
+    return ui_display_move(win->disp, x, y);
+#else
+    return 0;
+#endif
+  }
+#endif
 
 
   if (win->x == x && win->y == y) {
